# password_manager

./: .env.dev  .env.prod  .gitignore  README.md  docker-compose.prod.yaml  docker-compose.yaml
backend/: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  diesel.toml
backend/bak/: up.sql
backend/migrations/2024-07-10-031712_passwords/: down.sql  up.sql
backend/migrations/2024-08-03-212126_entra_info/: down.sql  up.sql
backend/migrations/2024-08-05-222656_create_users/: up.sql
backend/migrations/2024-08-05-225802_add_user_id_to_passwords/: down.sql  up.sql
backend/migrations/2024-08-06-013800_mandatory_password/: down.sql  up.sql
backend/migrations/2024-08-07-185432_remove_password_salt/: down.sql  up.sql
backend/src/: add_password.rs  auth_middleware.rs  base_url.rs  database.rs  del_password.rs  get_password.rs  jwt.rs  login.rs  main.rs  models.rs  new_user.rs  schema.rs  update_password.rs
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo
frontend/public/: index.html
frontend/src/: AddPassword.jsx  App.js  App.tsx  Passwords.jsx  connection.js  connection.ts  main.tsx
frontend/src/components/: AddPassword.jsx  AddPassword.tsx  ColorModeSwitch.tsx  EditableCell.tsx  Passwords.jsx  Passwords.tsx  TanStackTable.tsx  TestConnection.jsx  TestConnection.tsx  login.jsx  login.tsx  passwordCell.jsx  passwordCell.tsx  spoilerTag.jsx  spoilerTag.tsx
nginx/: nginx.conf
