[package]
name = "password_manager_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.5"
actix-cors = "0.7.0"
diesel = { version = "2.1.0", features = ["postgres"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15.6"
serde_qs = "0.13.0"

[[bin]]
name = "password_manager"
path = "src/main.rs"
